--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
   "author": "Bo Zhang",
   "license": "ISC",
   "dependencies": {
-    "react-router": "^2.0.0-rc5",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.1.2",
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.1.4"
   },
   "devDependencies": {
-    "react-hot-loader": "^1.3.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack": "^1.12.12",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
-    "jsx-loader": "^0.13.2",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13"
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "jsx-loader": "^0.13.2",
+    "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.0.2",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   }
 }
