--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
   "name": "react-template",
   "version": "0.0.0",
-  "description": "Basic react template with webpack",
-  "main": "index.js",
+  "description": "Razorfish Interview Code Challenge",
+  "main": "app/app.js",
   "scripts": {
     "start": "webpack-dev-server --host 0.0.0.0 --port 8080 --hot --progress --colors",
-    "build": "webpack --progress --colors"
+    "build": "webpack --progress --colors --config webpack.production.config.js"
   },
   "author": "Bo Zhang",
   "license": "ISC",
   "dependencies": {
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-redux": "^4.1.2",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.1.4"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.0.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.12",
